--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
 	 					<br>
 	 				Разработка сайтов под ключ</p>
 	 				<div class="header_button_block">
-	 					<button class="header_button">Связаться
-	 					</button>
-	 					<small>*Это бесплатно</small>
+	 					<a href="https://t.me/viktorlysov"class="header_button">Связаться
+	 					</a>
 	 				</div>
 	 				
 
@@ -102,7 +101,7 @@
 				<div class="col-md-4">
 					<div class="footer_cta_block">
 						<p class="footer_cta">Напишите мне:</p>
-						<button class="footer_button">Написать</button>
+						<a href="https://t.me/viktorlysov" class="footer_button">Написать</a>
 					</div>
 					
 				</div>
